--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "homepage": "https://github.com/actions/javascript-action#readme",
   "dependencies": {
     "@actions/core": "^1.2.5",
-    "@actions/github": "^5.0.3"
+    "@actions/github": "^5.0.3",
+    "axios": "^0.27.2",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.31.1",
