--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "dependencies": {
     "@actions/core": "^1.2.5",
     "@actions/github": "^5.0.3",
-    "axios": "^0.27.2",
-    "validatorjs": "^3.22.1"
+    "axios": "^0.27.2"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.31.1",
