--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -33,3 +33,18 @@ jobs:
         run: |
           npm install
           npm run all
+
+  publish_release:
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Publish Release
+        uses: ncipollo/release-action@v1
+        with:
+          name: Release ${{ github.ref_name	}}
+          tag: ${{ github.ref_name }}
