--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -46,5 +46,5 @@ jobs:
       - name: Publish Release
         uses: ncipollo/release-action@v1
         with:
-          name: Release ${{ github.ref_name	}}
+          name: ${{ github.ref_name }}
           tag: ${{ github.ref_name }}
