--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,8 @@ jobs:
           npm run all
 
   publish_release:
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: (github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id) && 
+      startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     permissions:
       contents: write
